# Rust-Test

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/http_outcall_backend/: Cargo.toml  http_outcall_backend.did
src/http_outcall_backend/src/: lib.rs
