[package]
name = "http_outcall_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
futures = "0.3.28"
hex = "0.4.3"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
serde = "1.0.159"
serde_json = "1.0.95"
